# RemoteTTS

./: LICENSE  README.md
src/: CMakeLists.txt  RemoteTTS.pro  configform.cpp  configform.h  configform.ui  main.cpp  remotetts.cpp  remotetts.h  remotetts.ui  systemstatus.cpp  systemstatus.h  tcpmanager.cpp  tcpmanager.h  udpmanager.cpp  udpmanager.h
